--- a/documentos.html
+++ b/documentos.html
@@ -35,18 +35,18 @@
   <main>
     <section class="section texto-largo">
       <h2>Carta Fundacional</h2>
-      <p>La Carta Fundacional de Hernavia es un documento breve, pensado como la base de nuestra identidad y organización. Funciona como una “constitución” inicial que guía los pasos del proyecto mientras crece y se consolida.</p>
-      <p>En ella se establece al Arconte como máxima autoridad, encargado de proteger la unión de la comunidad y tomar decisiones mientras se desarrollan instituciones más amplias. También recoge los principios fundamentales: respeto entre ciudadanos, cuidado de la naturaleza, participación activa, innovación y fraternidad con otras culturas.</p>
-      <p>Además, describe las obligaciones de los ciudadanos, que incluyen aportar al desarrollo de la comunidad, respetar las decisiones colectivas, defender la paz y contribuir al progreso común. Señala también objetivos iniciales como impulsar la innovación, proteger el medio ambiente, fomentar la educación cívica y promover un desarrollo económico propio.</p>
-      <p>La Carta dedica un espacio a los símbolos de Hernavia, especialmente la bandera, que representa la naturaleza, la paz, la innovación y las raíces con Colombia. Finalmente, aclara que se trata de un documento transitorio que podrá transformarse en una versión más completa a futuro.</p>
+      <p>La Carta Fundacional de Hernavia es un documento breve que define la base de nuestra organización y el marco inicial del proyecto. Actúa como una primera constitución que orienta el crecimiento de Hernavia mientras se desarrollan estructuras más amplias.</p>
+      <p>Establece al Arconte como autoridad principal en esta etapa, responsable de mantener la unidad de la comunidad y guiar las decisiones mientras surgen nuevas instituciones. También reúne los principios esenciales del proyecto.</p>
+      <p>La Carta también describe los símbolos de Hernavia, especialmente la bandera, Finalmente señala que este documento es transitorio y podrá actualizarse o ampliarse a medida que el proyecto avance y se consolide.</p>
       <a href="carta.html" class="boton-hernavia">Leer carta completa</a>
     </section>
 
     <section class="section texto-largo">
-      <h2>Leyes Transitorias</h2>
-      <p>Las Leyes Transitorias de Hernavia son un conjunto de normas provisionales que guían el funcionamiento de la comunidad mientras se consolida la organización. Establecen cómo se puede revocar la ciudadanía, el aporte obligatorio de cada ciudadano, las penalizaciones por incumplimiento, la participación en votaciones y asambleas, la administración de fondos y la eliminación de datos personales en casos de renuncia.</p>
-      <p>Estas leyes buscan mantener la unidad, proteger la naturaleza, fomentar la innovación y asegurar la cohesión de Hernavia. Son flexibles y sujetas a interpretación por el Arconte, siempre respetando los principios de respeto, paz, innovación y unión.</p>
-      <a href="leyes.html" class="boton-hernavia">Leer las leyes completas</a>
+      <h2>Instructivo de colaboradores</h2>
+      <p>Aunque cualquier persona puede colaborar proponiendo ideas, soluciones o compartiendo Hernavia con otras personas, un Colaborador Oficial es alguien reconocido formalmente por su aporte y su participación activa dentro del proyecto.</p>
+      <p>Este rol se otorga a quienes mantienen una colaboración constante, estratégica o de peso en el desarrollo de Hernavia.</p>
+      <p>Por esa razón, los Colaboradores Oficiales reciben un manual específico donde se explica como unirse, los beneficios, las normas y demas aspectos</p>
+      <a href="manual-colaboradores.html" class="boton-hernavia">Leer Manual</a>
     </section>
 
     <section class="section">
@@ -59,7 +59,7 @@
       <div id="faqContainer" class="faq-container" style="display:none; margin-top:20px;">
         <details class="faq-card">
           <summary>¿Los documentos tienen validez legal fuera de Hernavia?</summary>
-          <p>No, todos los documentos tienen efecto únicamente dentro de la comunidad de Hernavia y no generan obligaciones legales externas.</p>
+          <p>No, todos los documentos tienen efecto únicamente dentro de la comunidad de Hernaviana y no generan obligaciones legales externas.</p>
         </details>
 
         <details class="faq-card">
@@ -68,18 +68,17 @@
         </details>
 
         <details class="faq-card">
-          <summary>¿Por qué son Leyes Transitorias?</summary>
-          <p>Porque aún no están completamente consolidadas dentro del desarrollo de Hernavia. Con el tiempo podrán evolucionar hasta convertirse en leyes permanentes.</p>
-        </details>
-
-        <details class="faq-card">
           <summary>¿Quiénes forman la estructura de Hernavia?</summary>
           <p>Actualmente solo se tiene la figura principal del Arconte. A futuro se planean roles adicionales como el Sage y el Conclave Hernaviano, junto a otros cargos cuando haya más material humano disponible para integrarlos.</p>
         </details>
 
         <details class="faq-card">
-          <summary>¿Las leyes serán iguales para ciudadanos virtuales?</summary>
-          <p>Lo más probable es que se adapten para ser más flexibles y puedan aplicarse por igual a todos, aunque podría considerarse una división entre ciudadanos presenciales y virtuales según sus deberes y participación.</p>
+          <summary>¿Quién aprueba los cambios a los documentos?</summary>
+          <p>Actualmente solo el arconte hace ese proceso pero se espera mas adelnate que la comunidad pueda colaborar tambien.</p>
+        </details>
+        <details class="faq-card">
+          <summary>¿¿Quién puede ser colaborador de Hernavia??</summary>
+          <p>Cualquier persona que quiera apoyar el proyecto de forma activa, responsable y con aportes útiles para su desarrollo.</p>
         </details>
       </div>
     </section>
