--- a/carta.html
+++ b/carta.html
@@ -36,55 +36,32 @@
     <section class="texto-largo">
       <h2>Presentación</h2>
       <p>
-        Nosotros, los fundadores de <strong>Hernavia</strong>, proclamamos esta Carta Fundacional como el punto de partida de una comunidad que busca unir identidad, propósito y compromiso con el entorno natural y humano.
+        Nosotros, los fundadores de Hernavia, proclamamos esta Carta Fundacional como el punto de partida de todo el proyecto
       </p>
       <p>
-        Hernavia nace para proteger y promover sus pilares fundamentales: <strong>naturaleza, agua, innovación, fraternidad y paz</strong>, junto con sus valores complementarios: cohesión, unión, verdad y seguridad.
+       Hernavia nace como proyecto para impulsar sus 4 ejes esenciales la proteccion de la naturaleza, fomentar la innovacion, la resolucion pacifica de conflictos y union entre la comunidad y propulsar la innovacion.
       </p>
 
       <h2>Motivación y Propósito</h2>
       <p>
-        La creación de Hernavia responde a la necesidad de construir un espacio donde la comunidad viva de manera armónica, responsable y solidaria. Buscamos fortalecer la identidad hernaviana, fomentar la participación colectiva y promover una convivencia sustentable con el medio ambiente.
-      </p>
-
-      <h2>Misión</h2>
-      <p>
-        Forjar un entorno de unidad y bienestar común, impulsando la educación, la innovación, la cooperación y la protección de los recursos naturales, con el fin de contribuir al desarrollo humano y al equilibrio social.
+      Hernavia surge para crear un espacio donde la comunidad pueda desarrollarse de manera armoniosa, responsable y solidaria. Busca fomentar el cuidado de la naturaleza, impulsar la participación activa de la comunidad, promover la convivencia respetuosa tanto dentro de la comunidad tanto como con otros grupos, y apoyar la innovación mediante nuevas formas de alcanzar sus objetivos de manera eficiente y sostenible.
       </p>
 
       <h2>Objetivos Iniciales</h2>
       <ul>
-        <li>Fortalecer la cohesión y participación de la comunidad hernaviana.</li>
-        <li>Promover la educación cívica, cultural y científica.</li>
-        <li>Impulsar proyectos de innovación y desarrollo sostenible.</li>
-        <li>Fomentar el respeto y la conservación del entorno natural.</li>
-        <li>Preservar y difundir los símbolos e identidad de Hernavia.</li>
+        <li>Terminar y lanzar la web Gacha, asegurando que aporte información relevante y útil para los gachancipeños y, próximamente, para otros municipios.</li>
+        <li>Establecer las primeras alianzas estratégicas con entidades, comunidades y proyectos afines.</li>
+        <li>Difundir el proyecto Hernavia a través de medios y redes para atraer apoyantes y colaboradores.</li>
+        <li>Iniciar una colaboración con Gachancipá para poder desarrollar los primeros proyectos a nivel más amplio.</li>
+        <li>Reclutar a los primeros colaboradores oficiales del proyecto.</li>
+        <li>Comenzar la venta de pasteles de yuca desde Yukiherts como iniciativa piloto de producción local.</li>
       </ul>
-
-      <h2>Valores Fundamentales</h2>
-      <ul>
-        <li>Respeto y dignidad hacia cada ciudadano.</li>
-        <li>Cuidado responsable del medio ambiente y los bienes comunes.</li>
-        <li>Transparencia y cooperación en la toma de decisiones.</li>
-        <li>Solidaridad y apoyo mutuo entre comunidades.</li>
-        <li>Innovación constante al servicio del bien común.</li>
-        <li>Fraternidad y diálogo con otras culturas y proyectos afines.</li>
-      </ul>
-
-      <h2>Compromisos de los Ciudadanos</h2>
-      <ul>
-        <li>Participar activamente en el crecimiento y fortalecimiento de Hernavia.</li>
-        <li>Defender los valores de la paz, la verdad y la fraternidad.</li>
-        <li>Respetar las decisiones legítimas de las autoridades comunitarias.</li>
-        <li>Apoyar iniciativas de cooperación, innovación y servicio social.</li>
-        <li>Honrar los símbolos y principios de la comunidad.</li>
-      </ul>
-
+      
       <h2>El Arconte</h2>
       <p>
-        El <strong>Arconte</strong> representa la autoridad provisional de Hernavia durante su etapa fundacional. Su función es guiar el desarrollo inicial de las instituciones y garantizar que todas las acciones estén alineadas con los valores hernavianos.
+        El Arconte representa la autoridad maxima provisional de Hernavia durante su etapa fundacional. Su función es guiar el desarrollo inicial de las instituciones y garantizar que todas las acciones estén alineadas con los valores hernavianos.
       </p>
-      <p><strong>Responsabilidades:</strong></p>
+      <p>Responsabilidades:</p>
       <ul>
         <li>Proteger los pilares fundamentales de Hernavia.</li>
         <li>Coordinar las decisiones administrativas, sociales y culturales.</li>
@@ -92,7 +69,7 @@
         <li>Promover el consenso y la participación ciudadana.</li>
       </ul>
       <p>
-        <strong>Duración del cargo:</strong> transitoria, hasta el establecimiento de instituciones y mecanismos participativos más amplios.
+        Duración del cargo maximo: transitoria, hasta el establecimiento de instituciones y mecanismos participativos más amplios.
       </p>
 
       <h2>Carácter Provisional</h2>
@@ -106,8 +83,7 @@
       <p><strong>Autoridad fundacional:</strong> El Primer Arconte de Hernavia.</p>
 
       <h3 style="text-align:center; margin-top:30px;">Firmado simbólicamente</h3>
-      <p style="text-align:center;"><em>Por la voluntad del pueblo hernaviano y sus fundadores.</em></p>
-      <p style="text-align:center;">Etapa Fundacional — Año 2025</p>
+      <p style="text-align:center;"><em>Por la voluntad de los fundadores de Hernavia.</em></p>
 
       <p style="text-align: center; margin-top: 25px;">
         <a href="documentos.html" class="boton-hernavia">Volver a Documentos</a>
