--- a/manual-colaboradores.html
+++ b/manual-colaboradores.html
@@ -36,36 +36,33 @@
     <section class="texto-largo">
       <h2>Propósito del Documento</h2>
       <p>
-        Este documento explica qué significa ser colaborador de Hernavia, cómo integrarse al proyecto, cuáles son las normas de cooperación y los beneficios asociados a este rol.
+        Este documento busca explicar para los colaboradores oficiales de Hernavia como integrarse al proyecto, las normas, los beneficios, el como retirarse y como comunicarse con Hernavia.
       </p>
 
       <h2>Cómo unirse</h2>
       <ul>
         <li>
-          Mediante <strong>petición</strong>, exponiendo su forma de colaborar; Hernavia evaluará la propuesta, asignará al colaborador a una zona de acción y dará el visto bueno o no.
+          Se puede de 2 formas mediante petición, exponiendo su forma de colaborar, Hernavia evaluará la propuesta, aceptara o rechazara y si acepta la propuesta este asignara al colaborador a una zona de accion.
         </li>
         <li>
-          De manera <strong>informal</strong>, y el proyecto podrá contactar directamente si considera su participación necesaria.
-        </li>
-        <li>
-          El aporte debe ser <strong>constante o de peso</strong>, no necesariamente diario, pero sí relevante para el proyecto.
+          Tras uno o varios aportes de manera informal, existira la posibilidad que Hernavia contacte directamente si considera su participación necesaria.
         </li>
       </ul>
 
-      <h2>Normas y Obligaciones</h2>
+      <h2>Normas</h2>
       <ul>
-        <li>Mantener <strong>respeto</strong> hacia todos los miembros y la comunidad.</li>
-        <li>Promover y preservar la <strong>cooperación</strong> y la colaboración dentro del proyecto.</li>
+        <li>Mantener respeto hacia todos los miembros y la comunidad.</li>
+        <li>Promover y preservar la cooperación y la colaboración dentro del proyecto.</li>
         <li>Participar activamente en las iniciativas asignadas o sugeridas por Hernavia.</li>
-        <li>Actuar siempre respetando los <strong>pilares y principios</strong> del proyecto (naturaleza, innovación, cohesión, fraternidad).</li>
+        <li>Actuar siempre respetando los pilares y principios del proyecto.</li>
       </ul>
 
       <h2>Beneficios</h2>
       <ul>
-        <li>Reconocimiento oficial dentro de la comunidad como colaborador activo, con posibilidad de aparecer en una <strong>página especial de colaboradores</strong>.</li>
+        <li>Si se desea reconocimiento oficial dentro de la comunidad como colaborador activo.</li>
         <li>Mantenerse informado de los avances y detalles del proyecto.</li>
-        <li>Que sus opiniones y sugerencias sean consideradas en la toma de decisiones.</li>
-        <li>Posibilidad de formar parte de un <strong>organismo administrativo futuro</strong> dentro de Hernavia.</li>
+        <li>Posibilidad de consultar sus opinions frente a ciertos cambios ademas de mayor peso de sus opiniones.</li>
+        <li>Posibilidad de formar parte de un organismo administrativo futuro dentro de Hernavia.</li>
         <li>Participación preferencial en proyectos y alianzas estratégicas.</li>
       </ul>
 
@@ -74,7 +71,7 @@
         <li>Notificar retiro voluntario mediante los canales oficiales o contacto directo con la coordinación.</li>
         <li>Confirmación de la baja y actualización de registros por parte de la coordinación.</li>
         <li>Suspensión de beneficios oficiales tras la baja.</li>
-        <li>Los datos se almacenarán <strong>2 semanas</strong> para contabilidad, estadísticas y seguimiento.</li>
+        <li>Los datos se almacenarán 2 semanas para contabilidad, estadísticas y seguimiento.</li>
       </ul>
 
       <h2>Canales de comunicación</h2>
