--- a/comounirse.html
+++ b/comounirse.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>¿Cómo unirse? - Hernavia</title>
+  <title>¿Cómo colaborar - Hernavia</title>
   <meta name="description" content="Podras enviar tu solicitu de ciudadania virtual para cuando esta se active, forma parte de nuestra comunidad.">
   <meta name="theme-color" content="#ffffff">
   <meta name="keywords" content="Hernavia, unirse, ciudadanía, comunidad, identidad, participación, cultura, sostenibilidad, creatividad, naturaleza, paz, innovación">
@@ -19,7 +19,7 @@
 
 <body>
 <header>
-  <h1>¿Cómo unirse a Hernavia?</h1>
+  <h1>¿Cómo colaborar con Hernavia?</h1>
 </header>
 
 <nav class="nav-comun">
@@ -28,18 +28,21 @@
   <a href="noticias.html">Noticias</a>
   <a href="consultas.html">Consultas</a>
   <a href="simbolos.html">Símbolos</a>
-  <a href="comounirse.html" class="activo">¿Cómo unirse?</a>
+  <a href="comounirse.html" class="activo">¿Cómo colaborar?</a>
   <a href="sugerencias.html">Sugerencias</a>
 </nav>
 
 <main>
   <section class="section">
-    <h2>Formulario</h2>
-    <p>
-      Actualmente, la ciudadanía virtual no está habilitada.  
-      Sin embargo, puedes llenar este formulario y recibirás una notificación cuando se active oficialmente.
-    </p>
+    <h2>Como colaborar</h2>
+    
+    <p> Como se explica mejor en el <a href="manual-colaboradores.html">Manual de colaboradores</a>. Hernavia permite que cualquiera pueda colaborar con ella ya sea aportando ayuda puntual o colaborando de manera oficial mediante algún servicio por lo que si gustas simplemente aportar algo puedes enviar tu aporte a el correo oficial </p>
+   <p> <a href="mailto:hernaviaoficial@gmail.com">hernaviaoficial@gmail.com</a> </p>
 
+      <section class="section">
+    <h2>Como ser colaborador oficial</h2>
+
+      <p>Si deseas ser colaborador oficial, puedes completar el siguiente formulario para validar tu participación y definir tu área de contribución</p>
     <form action="https://formspree.io/f/xldpgjop" method="POST">
       <label for="nombre">Nombre completo:</label>
       <input type="text" id="nombre" name="nombre" required>
@@ -47,17 +50,8 @@
       <label for="correo">Correo electrónico:</label>
       <input type="email" id="correo" name="correo" required>
 
-      <label for="edad">Fecha de nacimiento:</label>
-      <input type="date" id="edad" name="edad" required>
-
-      <label for="ciudad">País / Departamento:</label>
-      <input type="text" id="ciudad" name="ciudad" required>
-
-      <label for="municipio">Municipio (opcional):</label>
-      <input type="text" id="municipio" name="municipio">
-
-      <label for="ocupacion">Ocupación (opcional):</label>
-      <input type="text" id="ocupacion" name="ocupacion">
+      <label for="libre">Explicacion de la propuesta:</label>
+      <input type="textarea" id="libre" name="libre" required>
 
       <label>
         <input type="checkbox" name="terminos" aria-label="Aceptar términos y condiciones" required>
@@ -76,68 +70,107 @@
 
     <div id="faqContainer" class="faq-container" style="display:none; margin-top:15px; text-align:left;">
       <details class="faq-card">
-        <summary>¿Por qué la ciudadanía virtual no está activa?</summary>
+        <summary>¿Cual es la diferencia entre un colaborador oficial y no oficial?</summary>
         <p>
-          El sistema de ciudadanía virtual está en desarrollo y se activará cuando los mecanismos de registro y participación estén completamente listos.
+          El colaborador no oficial puede referirse a cualquiera que aporte algo minimo a Hernavia mientras que uno oficial es cual que ya tiene relacion formal de colaboracion con Hernavia.
         </p>
       </details>
 
       <details class="faq-card">
-        <summary>¿Qué ventajas tendrá la ciudadanía virtual?</summary>
+        <summary>¿Cuanto tarda en aprovarse una solicitud?</summary>
         <p>
-          Permitirá participar activamente en consultas, acceder a documentación interna, recibir comunicados oficiales y representar formalmente a Hernavia en proyectos o eventos colaborativos.
+         Una solicitud normalmente de 4 a 10 dias ya fue revisada aunque el ser aceptada depende de como se pacte con la persona aunque el promedio esta entre esos dias.
         </p>
       </details>
-    </div>
-  </section>
+      
+        <details class="faq-card">
+        <summary>¿Qué pasa después de enviar mi solicitud?</summary>
+        <p>
+        El equipo revisará tu propuesta, evaluará su utilidad para Hernavia y te enviará una respuesta al correo registrado con la confirmación, denegacion o una solicitud de más información.
+        </p>
+      </details>
 
-  <section id="que-significa" class="texto-largo">
-    <h2>¿Qué significa unirse a Hernavia?</h2>
-    <p>
-      Unirse no es solo llenar un formulario, es formar parte de una identidad compartida.  
-      ¿Quieres saber más?
-    </p>
-    <div style="text-align:center;">
-      <a href="identidad.html" class="btn-link">Descúbrelo aquí</a>
+        <details class="faq-card">
+        <summary>¿Puedo cambiar mi rol, modificar mi propuesta o retirarme despues?</summary>
+        <p>
+       Si, puedes pedir cualquier cambio y se evaluara nuevamente.
+        </p>
+      </details>
+
+       <details class="faq-card">
+        <summary>¿Hernavia paga por colaborar?</summary>
+        <p>
+       No, Actualmente la colaboracion es voluntaria, aunque en un futuro no se niega que esto pueda cambiar.
+        </p>
+       </details>
+
+         <details class="faq-card">
+        <summary>¿Necesito vivir en Gachancipá o en Colombia?</summary>
+        <p>
+       No. Las colaboraciones pueden ser remotas desde cualquier lugar del mundo.
+        </p>
+       </details>
+
+          <details class="faq-card">
+        <summary>¿Qué nivel de compromiso se exige?</summary>
+        <p>
+       Ninguno fijo. Puedes aportar de diversos formas y diversas cantidades dependera de que se decida, pero en general no es un nivel alto.
+        </p>
+       </details>
+
+         <details class="faq-card">
+        <summary>¿Qué hago si no sé en qué puedo ayudar?</summary>
+        <p>
+       Puedes escribir al correo explicando tus habilidades o intereses. Hernavia te sugerirá áreas donde tu aporte podría ser útil.
+        </p>
+       </details>
     </div>
   </section>
 </main>
   
 <div id="modal-politica" class="modal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.6); z-index:1000; justify-content:center; align-items:center;">
   <div class="contenido" style="background:white; padding:20px; border-radius:10px; max-width:600px; max-height:80vh; overflow-y:auto;">
-    <h2>Política de Privacidad y Tratamiento de Datos</h2>
+
+    <h2>Política de Privacidad y Uso Responsable de Datos</h2>
     <p>
-      En <strong>Hernavia</strong> protegemos tu información personal conforme a los principios de respeto, seguridad y confidencialidad.
+      En <strong>Hernavia</strong> cuidamos tu información con criterios de respeto, seguridad y transparencia.
+      Los datos se usan únicamente para mantener un registro organizado de las solicitudes y para poder comunicarnos contigo cuando sea necesario.
     </p>
 
-    <h3>1. Datos recolectados</h3>
+    <h3>1. Información solicitada</h3>
     <p>
-      El formulario solicita únicamente los datos necesarios para identificarte y contactarte:  
-      <strong>nombre completo, fecha de nacimiento, país/departamento y correo electrónico</strong>.  
-      Los campos de <em>municipio</em> y <em>ocupación</em> son opcionales.
+      El formulario pide solo los datos indispensables para identificar quién realiza la solicitud:<br>
+      <strong>nombre completo, fecha de nacimiento, país/departamento y correo electrónico</strong>.<br>
+      Los campos de <em>municipio</em> y <em>ocupación</em> son opcionales y sirven únicamente para mejorar la precisión del registro.
     </p>
 
-    <h3>2. Finalidad</h3>
+    <h3>2. Uso de la información</h3>
     <p>
-      Los datos se usan <strong>exclusivamente para fines internos</strong> del proyecto Hernavia: gestión de solicitudes, registro ciudadano y comunicación institucional.  
-      No se comparten, venden ni divulgan a terceros.
+      La información se emplea <strong>exclusivamente con fines internos</strong> del proyecto Hernavia:
+      validación de identidades, organización del registro ciudadano y comunicación oficial.<br>
+      No se comparte, vende ni entrega a ninguna entidad externa.
     </p>
 
-    <h3>3. Conservación y eliminación</h3>
+    <h3>3. Seguridad y conservación</h3>
     <p>
-      Si decides anular tu solicitud, tus datos se conservarán por un máximo de <strong>un mes</strong> con fines administrativos, después serán eliminados de manera segura.
+      Los datos se almacenan de forma segura y se conservan solo mientras sigas activo como solicitante o ciudadano.<br>
+      Si decides retirar tu solicitud, se mantendrán hasta por <strong>un (1) mes</strong> para fines administrativos
+      y luego se eliminarán de manera permanente.
     </p>
 
     <h3>4. Derechos del participante</h3>
     <p>
-      Puedes solicitar en cualquier momento la <strong>corrección, actualización o eliminación</strong> de tus datos opcionales enviando un mensaje al equipo de Hernavia.  
-      Los datos esenciales (nombre, fecha de nacimiento, correo y país/departamento) se conservarán únicamente mientras mantengas tu condición de solicitante o ciudadano.
+      Puedes pedir en cualquier momento la <strong>corrección, actualización o eliminación</strong> de tus datos opcionales.<br>
+      Los datos esenciales se conservarán únicamente mientras mantengas tu solicitud activa.
     </p>
 
     <h3>5. Aceptación</h3>
     <p>
-      Al marcar la casilla de aceptación y enviar el formulario, confirmas que has leído y aceptado esta política de privacidad.
+      Al marcar la casilla y enviar el formulario confirmas que has leído y aceptado esta política.
     </p>
+
+  </div>
+</div>
 
     <button id="cerrar-politica" class="faq-toggle">Cerrar</button>
   </div>
@@ -182,3 +215,4 @@
 </script>
 </body>
 </html>
+  
