--- a/comounirse.html
+++ b/comounirse.html
@@ -38,7 +38,7 @@
     
     <p> Como se explica mejor en el <a href="manual-colaboradores.html">Manual de colaboradores</a>. Hernavia permite que cualquiera pueda colaborar con ella ya sea aportando ayuda puntual o colaborando de manera oficial mediante algún servicio por lo que si gustas simplemente aportar algo puedes enviar tu aporte a el correo oficial </p>
    <p> <a href="mailto:hernaviaoficial@gmail.com">hernaviaoficial@gmail.com</a> </p>
-
+  </section>
       <section class="section">
     <h2>Como ser colaborador oficial</h2>
 
@@ -133,44 +133,40 @@
 
     <h2>Política de Privacidad y Uso Responsable de Datos</h2>
     <p>
-      En <strong>Hernavia</strong> cuidamos tu información con criterios de respeto, seguridad y transparencia.
+      En Hernavia cuidamos tu información con criterios de respeto, seguridad y transparencia.
       Los datos se usan únicamente para mantener un registro organizado de las solicitudes y para poder comunicarnos contigo cuando sea necesario.
     </p>
 
     <h3>1. Información solicitada</h3>
     <p>
-      El formulario pide solo los datos indispensables para identificar quién realiza la solicitud:<br>
-      <strong>nombre completo, fecha de nacimiento, país/departamento y correo electrónico</strong>.<br>
-      Los campos de <em>municipio</em> y <em>ocupación</em> son opcionales y sirven únicamente para mejorar la precisión del registro.
+      El formulario pide solo los datos indispensables para identificar quién realiza la solicitud:
+      nombre completo, fecha de nacimiento y correo electrónico</strong>.
+      Y tu propuesta para saber que ofreces.
     </p>
 
     <h3>2. Uso de la información</h3>
     <p>
-      La información se emplea <strong>exclusivamente con fines internos</strong> del proyecto Hernavia:
-      validación de identidades, organización del registro ciudadano y comunicación oficial.<br>
+      La información se emplea exclusivamente con fines internos del proyecto Hernavia:
+      validación de identidades, organización del registro ciudadano y comunicación oficial.
       No se comparte, vende ni entrega a ninguna entidad externa.
     </p>
 
     <h3>3. Seguridad y conservación</h3>
     <p>
       Los datos se almacenan de forma segura y se conservan solo mientras sigas activo como solicitante o ciudadano.<br>
-      Si decides retirar tu solicitud, se mantendrán hasta por <strong>un (1) mes</strong> para fines administrativos
+      Si decides retirar tu solicitud, se mantendrán hasta por un maximo de dos semanas para fines administrativos
       y luego se eliminarán de manera permanente.
     </p>
 
     <h3>4. Derechos del participante</h3>
     <p>
-      Puedes pedir en cualquier momento la <strong>corrección, actualización o eliminación</strong> de tus datos opcionales.<br>
-      Los datos esenciales se conservarán únicamente mientras mantengas tu solicitud activa.
+      Podras pedir en cualquier momento la coreccion o actualizacion de tus datos y la eliminacion al retirarte, ademas de pedir la confirmacion sobre el estado de tus datos.
     </p>
 
     <h3>5. Aceptación</h3>
     <p>
       Al marcar la casilla y enviar el formulario confirmas que has leído y aceptado esta política.
     </p>
-
-  </div>
-</div>
 
     <button id="cerrar-politica" class="faq-toggle">Cerrar</button>
   </div>
@@ -215,4 +211,3 @@
 </script>
 </body>
 </html>
-  
