--- a/comounirse.html
+++ b/comounirse.html
@@ -36,8 +36,8 @@
   <section class="section">
     <h2>Como colaborar</h2>
     
-    <p> Como se explica mejor en el <a href="manual-colaboradores.html">Manual de colaboradores</a>. Hernavia permite que cualquiera pueda colaborar con ella ya sea aportando ayuda puntual o colaborando de manera oficial mediante algún servicio por lo que si gustas simplemente aportar algo puedes enviar tu aporte a el correo oficial </p>
-   <p> <a href="mailto:hernaviaoficial@gmail.com">hernaviaoficial@gmail.com</a> </p>
+    <p> Como se explica mejor en el <a href="manual-colaboradores.html">Manual de colaboradores</a>. Hernavia permite que cualquiera pueda colaborar con ella ya sea aportando ayuda puntual o colaborando de manera oficial mediante algún servicio por lo que si gustas simplemente aportar algo puedes enviar tu aporte a <a href="sugerencias.html">Sugerencias</a> </p>
+    
   </section>
       <section class="section">
     <h2>Como ser colaborador oficial</h2>
