--- a/sugerencias.html
+++ b/sugerencias.html
@@ -58,12 +58,23 @@
 
         <button type="submit">Enviar sugerencia</button>
       </form>
+
+      <h2>También puedes seguirnos o contactarnos atravez de</h2>
+      <p>Instagram: <a href="https://www.instagram.com/hernaviaoficial" target="_blank">Instagram Hernavia</a></p>
+      <p>YouTube: <a href="https://www.youtube.com/@Hernaviaoficial" target="_blank">YouTube Hernavia</a></p>
     </section>
 
     <section class="section">
-      <h2>También puedes seguirnos</h2>
-      <p>Instagram: <a href="https://www.instagram.com/hernaviaoficial" target="_blank">Instagram Hernavia</a></p>
-      <p>YouTube: <a href="https://www.youtube.com/@Hernaviaoficial" target="_blank">YouTube Hernavia</a></p>
+      <h2>Estado actual</h2>
+      <p>Actualmente Hernavia esta:</p>
+      <ul>
+  <li>Terminando la página web</li>
+  <li>Probando ideas, planes y demás</li>
+  <li>Terminando la web Gacha</li>
+  <li>Preparando Yukiherts para empezar a vender</li>
+  <li>Terminando los ajustes finales antes de poner a Hernavia en su proxima etapa</li>
+</ul>
+
     </section>
   </main>
 
