--- a/documentos.html
+++ b/documentos.html
@@ -27,8 +27,7 @@
     <a href="documentos.html" class="activo">Documentos</a>
     <a href="noticias.html">Noticias</a>
     <a href="consultas.html">Consultas</a>
-    <a href="simbolos.html">Símbolos</a>
-    <a href="comounirse.html">¿Cómo unirse?</a>
+    <a href="comounirse.html">¿Cómo colaborar?</a>
     <a href="sugerencias.html">Sugerencias</a>
   </nav>
 
