--- a/noticias.html
+++ b/noticias.html
@@ -29,8 +29,7 @@
     <a href="documentos.html">Documentos</a>
     <a href="noticias.html">Noticias</a>
     <a href="consultas.html">Consultas</a>
-    <a href="simbolos.html">Símbolos</a>
-    <a href="comounirse.html">¿Cómo unirse?</a>
+    <a href="comounirse.html">¿Cómo colaborar?</a>
     <a href="sugerencias.html">Sugerencias</a>
   </nav>
 
