--- a/sugerencias.html
+++ b/sugerencias.html
@@ -26,8 +26,7 @@
     <a href="documentos.html">Documentos</a>
     <a href="noticias.html">Noticias</a>
     <a href="consultas.html">Consultas</a>
-    <a href="simbolos.html">Símbolos</a>
-    <a href="comounirse.html">¿Cómo unirse?</a>
+    <a href="comounirse.html">¿Cómo colaborar?</a>
     <a href="sugerencias.html" class="activo">Sugerencias</a>
   </nav>
 
