--- a/documentos.html
+++ b/documentos.html
@@ -48,6 +48,12 @@
       <a href="manual-colaboradores.html" class="boton-hernavia">Leer Manual</a>
     </section>
 
+    <section class="section texto-largo">
+      <h2>Simbolos oficiales</h2>
+      <p>Aqui se resaltan los simbolos de Hernavia que hasta el momento son oficiales</p>
+<a href="simbolos.html" class="boton-hernavia">Ver simbolos</a>
+    </section>
+      
     <section class="section">
       <h2 style="text-align:center; color:#006A44; margin-bottom:15px;">Preguntas Frecuentes</h2>
 
