--- a/simbolos.html
+++ b/simbolos.html
@@ -35,75 +35,27 @@
   <section>
     <h2>Bandera</h2>
     <img src="img/bandera.png" alt="Bandera de Hernavia" class="bandera" fetchpriority="high">
-    <p>
-      La bandera de Hernavia simboliza la naturaleza, la innovación, la paz y la fraternidad con Colombia.
-    </p>
+<p>
+  La bandera de Hernavia utiliza el color verde (#006a44), ligeramente más azul y profundo, que simboliza la naturaleza y la innovación por su tono particular.
+</p>
+<p>
+  El blanco (#f3f5f2) representa la cohesión, la unión, la resolución pacífica de conflictos, así como la verdad, reflejando un sentido de naturalidad en lugar de artificialidad.
+</p>
+<p>
+  El amarillo (#fccc04) simboliza la fraternidad con otras comunidades, mostrando apertura y colaboración.
+</p>
+
   </section>
 
   <section class="section-lema">
     <h2>Lema y Frase</h2>
-    <p><strong>Lema:</strong> Paz, Naturaleza, Innovación</p>
-    <p><strong>Frase:</strong> Nacidos de un sueño, luchando por cumplirlo.</p>
-  </section>
-
-  <section class="section">
-    <h2>Preguntas Frecuentes</h2>
-
-    <div style="text-align:center;">
-      <button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
-    </div>
-
-    <div id="faqContainer" class="faq-container" style="display:none; margin-top:20px;">
-      <details class="faq-card">
-        <summary>¿Por qué existe el himno?</summary>
-        <p>
-          El himno fue creado para acercar Hernavia a la gente, fortalecer la identidad de la comunidad y transmitir sus valores de unión, innovación y respeto por la naturaleza.
-        </p>
-      </details>
-
-      <details class="faq-card">
-        <summary>¿Por qué la bandera tiene esos colores?</summary>
-        <p>
-          Los colores fueron elegidos cuidadosamente para representar a Hernavia:  
-          el verde simboliza la naturaleza;  
-          el tono marino, el agua y la innovación;  
-          el blanco representa la paz, la unión, la cohesión, la verdad y la tranquilidad;  
-          y el amarillo refleja la hermandad con Colombia y la fraternidad.
-        </p>
-      </details>
-
-      <details class="faq-card">
-        <summary>¿Puedo crear un símbolo para Hernavia?</summary>
-        <p>
-          Sí. Puedes enviar tu propuesta a nuestras redes o formularios. Podríamos usar tu diseño para complementar los símbolos de Hernavia.  
-          Además, se planea crear un escudo oficial y otras insignias.
-        </p>
-      </details>
-
-      <details class="faq-card">
-        <summary>¿Qué otros símbolos se planean?</summary>
-        <p>
-          Además de los ya existentes, se planea crear un escudo y diversos logotipos o variantes “sorpresa”.
-        </p>
-      </details>
-    </div>
+    <p><strong>Lema:</strong> Koes, Naturale, Innovakion (cohesion, naturaleza, innovacion) </p>
+    <p>Este muestra los pilares de hernavia aunque no es 100% definitivo.</p>
   </section>
 </main>
 
 <footer>
   &copy; 2025 Hernavia — Proyecto Cultural
 </footer>
-
-<script>
-  const toggleButton = document.getElementById('toggleFAQ');
-  const faqContainer = document.getElementById('faqContainer');
-  let visible = false;
-
-  toggleButton.addEventListener('click', () => {
-    visible = !visible;
-    faqContainer.style.display = visible ? 'block' : 'none';
-    toggleButton.textContent = visible ? 'Ocultar Preguntas' : 'Mostrar Preguntas';
-  });
-</script>
 </body>
 </html>
