--- a/noticias.html
+++ b/noticias.html
@@ -32,27 +32,10 @@
     <a href="comounirse.html">¿Cómo colaborar?</a>
     <a href="sugerencias.html">Sugerencias</a>
   </nav>
-
-<main>
-  <section class="texto-largo">
-    <h2>Noticia 002 – Semana cultural en Gachancipá</h2>
-    <p>En el parque principal de Gachancipá se llevará a cabo la Semana Cultural.</p>
-    <p>Habrá diversidad de eventos y muchas cosas interesantes, desde negocios muy diversos hasta algunas atracciones, dependiendo del día. Más información en la fuente oficial.</p>
-    <p style="margin-top:20px;">
-      Fuente: 
-      <a href="https://gachancipa-cundinamarca.gov.co/publicaciones/566/programacion-xxx-semana-cultural-internacional-de-gachancipa/" 
-         target="_blank" 
-         rel="noopener noreferrer">
-        Alcaldía de Gachancipá — Programación XXX Semana Cultural Internacional de Gachancipá
-      </a>.
-    </p>
-  </section>
-</main>
-
   <main>
   <section class="texto-largo">
     <h2>Noticia 003 - Proxima Etapa</h2>
-<p>Hernavia luego de largo planteamiento esta cerca de pasar de su primera etapa "teorica" a la "fisica" con lo cual empezara a tener accion e impacto real, mantente pendiente para el momento pues aun falta unas semanas pero se avisara poco antes</p>
+<p>Hernavia luego de largo planteamiento esta cerca de pasar de su primera etapa "teorica" a la "fisica" con lo cual empezara a tener accion e impacto real, por lo que le falta solo terminar algunos aspectos de la web, de webgacha de yukiherts y definir algunas cosas</p>
     <p>Fuente: Comunicacion interna de Hernavia</p>
   </section>
   </main>
