--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
     <a href="comounirse.html">¿Cómo colaborar?</a>
     <a href="sugerencias.html">Sugerencias</a>
   </nav>
+<label for="lang-select">Idioma:</label>
+<select id="lang-select" onchange="cambiarIdioma(this.value)">
+  <option value="es">Español (100% terminado)</option>
+  <option value="hrn">Hernaviano (~5% en proceso)</option>
+  <option value="en">Inglés (0% en proceso) </option>
+</select>
 
+  
 <main>
     <section id="que-es" class="texto-largo">
       <h2>¿Qué es Hernavia?</h2>
@@ -119,12 +126,3 @@
   </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
