--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <label for="lang-select">Idioma:</label>
 <select id="lang-select" onchange="cambiarIdioma(this.value)">
   <option value="es">Español (100% terminado)</option>
-  <option value="hrn">Hernaviano (~5% en proceso)</option>
+  <option value="hrn">Hernaviano (0% en proceso)</option>
   <option value="en">Inglés (0% en proceso) </option>
 </select>
 
@@ -126,3 +126,4 @@
   </script>
 </body>
 </html>
+
