--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
     <a href="sugerencias.html">Sugerencias</a>
   </nav>
 <label for="lang-select">Idioma:</label>
-<select id="lang-select" onchange="cambiarIdioma(this.value)">
+<select id="lang-select" onchange="cambiarIdioma(this.value)" class="language-select">
   <option value="es">Español (100% terminado)</option>
   <option value="hrn">Hernaviano (0% en proceso)</option>
-  <option value="en">Inglés (0% en proceso) </option>
+  <option value="en">Inglés (0% en proceso)</option>
 </select>
 
-  
 <main>
     <section id="que-es" class="texto-largo">
       <h2>¿Qué es Hernavia?</h2>
@@ -126,4 +125,5 @@
   </script>
 </body>
 </html>
+
 
