--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@
     <a href="comounirse.html">¿Cómo colaborar?</a>
     <a href="sugerencias.html">Sugerencias</a>
   </nav>
-<label for="lang-select">Idioma:</label>
-<select id="lang-select" onchange="cambiarIdioma(this.value)" class="language-select">
-  <option value="es">Español (100% terminado)</option>
-  <option value="hrn">Hernaviano (0% en proceso)</option>
-  <option value="en">Inglés (0% en proceso)</option>
-</select>
+<div class="language-container">
+  <label for="lang-select">Idioma:</label>
+  <select id="lang-select" onchange="cambiarIdioma(this.value)">
+    <option value="es">Español (100% terminado)</option>
+    <option value="hrn">Hernaviano (0% en proceso)</option>
+    <option value="en">Inglés (0% en proceso)</option>
+  </select>
+</div>
+
 
 <main>
     <section id="que-es" class="texto-largo">
@@ -125,5 +128,6 @@
   </script>
 </body>
 </html>
+
 
 
