--- a/index.html
+++ b/index.html
@@ -87,16 +87,6 @@
           <summary>¿Por qué “Arconte”?</summary>
           <p>El término “Arconte” se usa de forma simbólica para representar una figura de liderazgo dentro de Hernavia. Fue elegido para distinguir la organización sin recurrir a títulos políticos o tradicionales.</p>
         </details>
-
-        <details class="faq-card">
-          <summary>¿Existen riesgos legales al unirse?</summary>
-          <p>No. Hernavia funciona como un proyecto ciudadano y no tiene implicaciones legales. Las sanciones o medidas internas no afectan la vida legal o civil de los participantes.</p>
-        </details>
-
-        <details class="faq-card">
-          <summary>¿Qué beneficios tiene unirse?</summary>
-          <p>Participar en Hernavia permite ser parte de decisiones colectivas, apoyar iniciativas locales y acceder a beneficios comunitarios futuros.</p>
-        </details>
         
          <details class="faq-card">
           <summary>¿Que a hecho Hernavia?</summary>
@@ -104,8 +94,8 @@
         </details>
         
          <details class="faq-card">
-          <summary>¿Hernavia tiene que ver con la institucion Hernado Navia Varon”?</summary>
-          <p.>No, la institucion academica Hernado Navia varon es una institucion educativa ubicada en cali que celebra la afrocolombianidad hernaviana y usan el termino hernavianos, y aunque hernavia tambien identifica sus ciudadanos como Hernavianos este proyecto no este relacionado con la institucion y son 2 entidades distintas.</p>
+          <summary>¿Hernavia tiene que ver con la institucion Hernado Navia Varon?</summary>
+          <p.>La Institución Académica Hernando Navia Varón, ubicada en Cali, celebra la afrocolombianidad y usa el término “hernavianos” para su comunidad. Aunque comparte ese término, no está relacionada con el proyecto Hernavia. Son entidades totalmente distintas</p>
         </details>
       </div>
     </section>
@@ -128,6 +118,7 @@
   </script>
 </body>
 </html>
+
 
 
 
