--- a/documentos.html
+++ b/documentos.html
@@ -82,7 +82,7 @@
           <p>Actualmente solo el arconte hace ese proceso pero se espera mas adelnate que la comunidad pueda colaborar tambien.</p>
         </details>
         <details class="faq-card">
-          <summary>¿¿Quién puede ser colaborador de Hernavia??</summary>
+          <summary>¿Quién puede ser colaborador de Hernavia?</summary>
           <p>Cualquier persona que quiera apoyar el proyecto de forma activa, responsable y con aportes útiles para su desarrollo.</p>
         </details>
       </div>
