--- a/consultas.html
+++ b/consultas.html
@@ -50,24 +50,29 @@
     </form>
   </section>
   
-    <section class="section">
-  <h2>Desarrollo Documental</h2>
-      <p>¿Qué temas, ideas o áreas consideras que deberían añadirse, ampliarse o mejorarse en los documentos oficiales de Hernavia para fortalecer su claridad, propósito y utilidad?</p>
-       <form action="https://formspree.io/f/xldpgjop" method="POST" style="margin-top:15px;">
-      <label for="mensaje">Tu propuesta o idea:</label>
-      <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
-          <button type="submit" class="faq-toggle">Enviar propuesta</button>
-</section>
-  
-         <section class="section">
-  <h2>Desarrollo Documental</h2>
-      <p>¿Qué temas, ideas o áreas consideras que deberían añadirse, ampliarse o mejorarse en los documentos oficiales de Hernavia para fortalecer su claridad, propósito y utilidad?</p>
-       <form action="https://formspree.io/f/xldpgjop" method="POST" style="margin-top:15px;">
-      <label for="mensaje">Tu propuesta o idea:</label>
-      <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
-          <button type="submit" class="faq-toggle">Enviar propuesta</button>
-         </section>
+  <section class="section">
+    <h2>Desarrollo Documental</h2>
+    <p>¿Qué temas, ideas o áreas consideras que deberían añadirse, ampliarse o mejorarse en los documentos oficiales de Hernavia para fortalecer su claridad, propósito y utilidad?</p>
+
+    <form action="https://formspree.io/f/xldpgjop" method="POST" style="margin-top:15px;">
+      <label for="mensaje2">Tu propuesta o idea:</label>
+      <textarea id="mensaje2" name="mensaje" rows="4" required></textarea>
+      <button type="submit" class="faq-toggle">Enviar propuesta</button>
+    </form>
+  </section>
+
+  <section class="section">
+    <h2>Desarrollo Documental</h2>
+    <p>¿Qué temas, ideas o áreas consideras que deberían añadirse, ampliarse o mejorarse en los documentos oficiales de Hernavia para fortalecer su claridad, propósito y utilidad?</p>
+
+    <form action="https://formspree.io/f/xldpgjop" method="POST" style="margin-top:15px;">
+      <label for="mensaje3">Tu propuesta o idea:</label>
+      <textarea id="mensaje3" name="mensaje" rows="4" required></textarea>
+      <button type="submit" class="faq-toggle">Enviar propuesta</button>
+    </form>
+  </section>
 </main>
+
 
 <footer>
   &copy; 2025 Hernavia — Proyecto Cultural
