--- a/consultas.html
+++ b/consultas.html
@@ -62,8 +62,8 @@
   </section>
 
   <section class="section">
-    <h2>Desarrollo Documental</h2>
-    <p>¿Qué temas, ideas o áreas consideras que deberían añadirse, ampliarse o mejorarse en los documentos oficiales de Hernavia para fortalecer su claridad, propósito y utilidad?</p>
+    <h2>Rumbo y evolución del proyecto</h2>
+    <p>¿Qué elementos crees que podrían expandirse, modificarse o incorporarse a futuro en el proyecto de Hernavia??</p>
 
     <form action="https://formspree.io/f/xldpgjop" method="POST" style="margin-top:15px;">
       <label for="mensaje3">Tu propuesta o idea:</label>
