--- a/noticias.html
+++ b/noticias.html
@@ -39,6 +39,9 @@
     <p>Fuente: Comunicacion interna de Hernavia</p>
   </section>
   </main>
+  <section class="texto-largo">
+    <p>Pronto mas noticias</p>
+  </section>
   <footer>
     &copy; 2025 Hernavia — Proyecto Cultural
   </footer>
